gatekeeper-policy-examples/policies/k8sforbiddenloadbalancer-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sforbiddenloadbalancer
spec:
  crd:
    spec:
      names:
        kind: K8sForbiddenLoadBalancer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sforbiddenloadbalancer

        violation[{"msg": msg}] {
          input.review.object.kind == "Service"
          input.review.object.spec.type == "LoadBalancer"
          msg := "LoadBalancer Service nije dozvoljen u ovom namespace-u."
        }
