gatekeeper-policy-examples/policies/pod-no-hostpath-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHostPath
metadata:
  name: pod-no-hostpath
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
  parameters: {}
